--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 <body>
     <header>
         <div class="px-4 py-5 my-0 text-center">
-            <h1 class="display-5 fw-bold text-body-emphasis">Skinner BEST NHL Goalie</h1>
+            <h1 id="hero-text" class=display-5 fw-bold text-body-emphasis">Skinner BEST NHL Goalie</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
-                    world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive
-                    grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> <button type="button"
-                        class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
+                <p class="lead mb-4">Stuart Skinner: The Standard for NHL Goaltending</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
+                    <a href="https://www.espn.com/nhl/player/_/id/4268767/stuart-skinner" target="_blank" id=cta " class="btn btn-primary btn-lg px-4 gap-3">Read Now</a>
                 </div>
             </div>
         </div>
